{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 150,
  "lineage": "45d07bef-6f0f-93ea-af7c-ebbfea744b5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:533616270150:loadbalancer/skcc-dev-helloapp",
            "availability_zones": [
              "ap-northeast-2a",
              "ap-northeast-2b",
              "ap-northeast-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "skcc-dev-helloapp-1327208499.ap-northeast-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "skcc-dev-helloapp",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "skcc-dev-helloapp",
            "security_groups": [
              "sg-05ab6fbb79c82c9be"
            ],
            "source_security_group": "533616270150/skcc-dev-helloapp-elb",
            "source_security_group_id": "sg-05ab6fbb79c82c9be",
            "subnets": [
              "subnet-089616bd34b60f833",
              "subnet-09e7ff3b8d961632f",
              "subnet-0a9d844bf5b2a3f88"
            ],
            "tags": {
              "Company": "SK GAS",
              "Department": "Unit1",
              "Name": "skcc-dev-helloapp",
              "Namespace": "skcc",
              "Stage": "dev",
              "User": "jingood2@sk.com"
            },
            "zone_id": "ZWKZPGTI48KDX"
          },
          "depends_on": [
            "aws_security_group.elb",
            "data.aws_availability_zones.all",
            "module.skcc_dev_helloapp_label"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533616270150:security-group/sg-05ab6fbb79c82c9be",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ab6fbb79c82c9be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "skcc-dev-helloapp-elb",
            "name_prefix": null,
            "owner_id": "533616270150",
            "revoke_rules_on_delete": false,
            "tags": {
              "Company": "SK GAS",
              "Department": "Unit1",
              "Name": "skcc-dev-helloapp",
              "Namespace": "skcc",
              "Stage": "dev",
              "User": "jingood2@sk.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cf060c10dbaaf82"
          },
          "depends_on": [
            "module.skcc_dev_helloapp_label"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533616270150:security-group/sg-07cdd395a3b74605e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07cdd395a3b74605e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "skcc-dev-helloapp-ec2",
            "name_prefix": null,
            "owner_id": "533616270150",
            "revoke_rules_on_delete": false,
            "tags": {
              "Company": "SK GAS",
              "Department": "Unit1",
              "Name": "skcc-dev-helloapp",
              "Namespace": "skcc",
              "Stage": "dev",
              "User": "jingood2@sk.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cf060c10dbaaf82"
          },
          "depends_on": [
            "module.skcc_dev_helloapp_label"
          ]
        }
      ]
    }
  ]
}